kubernetes/stock-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock
  labels:
    app: stock
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: stock
